--- a/src/projects/Home/Home.css
+++ b/src/projects/Home/Home.css
@@ -1,17 +1,21 @@
-a {
-    display: block;
-    margin: 1rem;
+.project-links li {
+    text-align: left;
+    margin: 1.2rem;
 }
 
-a:hover {
+.project-links li a {
+    padding-left: 0.8rem;
+}
+
+.project-links li a:hover {
     cursor: pointer;
 }
 
-p {
+.home p {
     display: inline;
 }
 
-.powered-by {
+.home .powered-by {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -22,7 +26,7 @@ p {
     justify-content: center;
 }
 
-.vite {
+.home .vite {
     font-size: 0.3rem;
     display: inline;
 }
