--- a/src/projects/NavbarDropDown/NavbarDrop.css
+++ b/src/projects/NavbarDropDown/NavbarDrop.css
@@ -1,45 +1,47 @@
-nav ul {
-    list-style: none;
-
+.navbar-list {
     display: flex;
     margin: 0;
     padding: 0;
 
     background-color: #333;
     color: #fff;
+    list-style: none;
 }
 
-nav ul li {
+.navbar-list li {
     position: relative;
-    min-width: 160px;
+    width: 160px;
 
     padding: 16px 12px;
 }
 
-nav ul li:hover {
+.navbar-list li:hover {
     cursor: pointer;
     background-color: #111;
 }
 
 .drop-down__content {
+    box-sizing: border-box;
     position: absolute;
     left: 0;
 
     margin-top: 15px;
-    display: none;
+    padding: 0;
+    display: flex;
     flex-direction: column;
-    min-width: 160px;
 
     background-color: #fff;
     color: #333;
     border: solid 1px #333;
+    list-style: none;
+}
+
+.drop-down__content li {
+    width: 160px;
+    padding: 16px 11px;
 }
 
 .drop-down__content li:hover {
     cursor: pointer;
     background-color: #f1f1f1;
-}
-
-.drop-down__content--visible {
-    display: flex;
 }
